Bug 406595 - Layer filter's opener menu is too narrow on Layer dock.
Summary: Layer filter's opener menu is too narrow on Layer dock.
Status: RESOLVED FIXED
Alias: None
Product: Breeze
Classification: Plasma
Component: QStyle (other bugs)
Version First Reported In: 5.15.4
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Unassigned bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-04-16 12:47 UTC by Sabri Ünal
Modified: 2020-01-08 14:30 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Simple size issue on the Layers dock. (26.67 KB, image/png)
2019-04-16 12:47 UTC, Sabri Ünal
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Sabri Ünal 2019-04-16 12:47:03 UTC
Created attachment 119434 [details]
Simple size issue on the Layers dock.

The filter menu is too narrow on the Layers dock. Impossible to read what it contains.

STEPS TO REPRODUCE

1) Open an image.
2) Check the filter of the Layers dock.

I have marked it on the screenshot.


Krita

 Version: 4.2.0-pre-alpha (Via PPA)
 Languages: en
 Hidpi: true

Qt

  Version (compiled): 5.9.5
  Version (loaded): 5.9.5

OS Information

  Build ABI: x86_64-little_endian-lp64
  Build CPU: x86_64
  CPU: x86_64
  Kernel Type: linux
  Kernel Version: 4.15.0-48-lowlatency
  Pretty Productname: Ubuntu 18.04.2 LTS
  Product Type: ubuntu
  Product Version: 18.04
Comment 1 Halla Rempt 2019-04-17 09:18:14 UTC
It looks like this is a regression in Qt: https://bugreports.qt.io/browse/QTBUG-73653
Comment 2 Halla Rempt 2019-04-17 09:21:24 UTC
Hm, no. If I start Krita with --style=fusion, the combobox works. It must be a bug in the breeze style.
Comment 3 Halla Rempt 2019-04-17 09:23:48 UTC
Git commit 935f0631262b336b7f59431e2f7f885dc52bbf1b by Boudewijn Rempt.
Committed on 17/04/2019 at 09:23.
Pushed by rempt into branch 'master'.

Disable the Breeze widget style

Until https://bugs.kde.org/show_bug.cgi?id=406595 is fixed, Breeze
breaks the layer filter combobox, so we can only allow fusion for
now :-(

M  +1    -1    libs/ui/KisApplication.cpp

https://commits.kde.org/krita/935f0631262b336b7f59431e2f7f885dc52bbf1b
Comment 4 Halla Rempt 2019-07-31 10:34:13 UTC
For posterities sake and because reddit is a crap place for tracking bug reports, copied from https://www.reddit.com/r/kde/comments/cjpy45/krita_has_breeze_style_disabled_because_of_a_bug/evj660z/ 

–]kbroulik 2 points 3 hours ago 

I looked into the bug a few weeks ago but QStyle is complicated...

If they didn't use a QComboBox with a custom delegate with checkboxes and custom size hints (which Breeze seems to disregard leading to the bug) for something that should have clearly just been a QMenu, none of this would have been an issue.

I find it somewhat sad and insulting how they switch off Breeze widget style every other month for some minor inconvenience.
Comment 5 Philipp A. 2019-08-02 08:53:32 UTC
I agree. I prefer temporary inconveniences like this to having my theme choices disobeyed.

If the Krita devs can’t or don’t want to help fix a Breeze bug, there should be a grace period allowing others to fix it before they blacklist Breeze.
Comment 6 Halla Rempt 2019-08-02 09:28:29 UTC
Phil, you can already override the the theme selection. Why isn't that good enough for you?

I don't want to Krita to be broken by default, that would only give me more useless bug reports.
Comment 7 Kai Uwe Broulik 2019-12-05 08:03:19 UTC
Git commit 818c841b0b20fc6d56e6365fcd57a620a6d98303 by Kai Uwe Broulik.
Committed on 05/12/2019 at 08:01.
Pushed by broulik into branch 'master'.

[KisColorFilterCombo] Force ComboBox popup

Only in this mode will Qt respect the contents of the ComboBox popup. This is what Fusion uses.

Differential Revision: https://phabricator.kde.org/D25739

M  +23   -0    libs/ui/widgets/kis_color_filter_combo.cpp

https://invent.kde.org/kde/krita/commit/818c841b0b20fc6d56e6365fcd57a620a6d98303
Comment 8 Halla Rempt 2020-01-08 14:30:24 UTC
Git commit 6ce046bd3aa2976686a5e95264774e3c4f3a91d1 by Boudewijn Rempt, on behalf of Kai Uwe Broulik.
Committed on 08/01/2020 at 14:19.
Pushed by rempt into branch 'krita/4.2'.

[KisColorFilterCombo] Force ComboBox popup

Only in this mode will Qt respect the contents of the ComboBox popup. This is what Fusion uses.

Differential Revision: https://phabricator.kde.org/D25739

(cherry picked from commit 818c841b0b20fc6d56e6365fcd57a620a6d98303)

M  +23   -0    libs/ui/widgets/kis_color_filter_combo.cpp

https://invent.kde.org/kde/krita/commit/6ce046bd3aa2976686a5e95264774e3c4f3a91d1