[KisColorFilterCombo] Force ComboBox popup

Only in this mode will Qt respect the contents of the ComboBox popup. This is what Fusion uses.

BUG: 406595

Differential Revision: https://phabricator.kde.org/D25739